crates/tree-sitter-url/test/corpus/complex-urls.txt
============================
Complex URL with all features
============================

{{baseUrl}}/api/v1/users/:id/posts?include={{relations}}&sort=date&limit={{count}}

---
(source_file
  (url_line
    (variable)
    (url_components
      (path
        "/"
        (path_segment)
        "/"
        (path_segment)
        "/"
        (path_segment)
        "/"
        (path_param)
        "/"
        (path_segment))
      (query_string
        (query_param
          (key)
          (variable))
        (query_param
          (key)
          (value))
        (query_param
          (key)
          (variable))))))


============================
Full URL with everything
============================

https://api.example.com:8443/users/:userId/profile?format=json&fields={{userFields}}

---
(source_file
  (url_line
    (protocol)
    (domain_and_port
      (domain)
      (port))
    (url_components
      (path
        "/"
        (path_segment)
        "/"
        (path_param)
        "/"
        (path_segment))
      (query_string
        (query_param
          (key)
          (value))
        (query_param
          (key)
          (variable)))))))


============================
Multiple variables in path
============================

{{host}}/{{api}}/v{{version}}/resources

---
(source_file
  (url_line
    (variable)
    (url_components
      (path
        "/"
        (variable)
        "/"
        (path_segment)
        "/"
        (variable)
        "/"
        (path_segment))))))


============================
Just path with parameters
============================

/resource/:id/subresource/:subId

---
(source_file
  (url_line
    (url_components
      (path
        "/"
        (path_segment)
        "/"
        (path_param)
        "/"
        (path_segment)
        "/"
        (path_param))))))


============================
Simple HTTPS URL
============================

https://localhost/health

---
(source_file
  (url_line
    (protocol)
    (domain_and_port
      (hostname))
    (url_components
      (path
        "/"
        (path_segment))))))


============================
Example from original file
============================

{{baseUrl}}/path-segment/:id/another-path-segment?query={{variable}}

---
(source_file
  (url_line
    (variable)
    (url_components
      (path
        "/"
        (path_segment)
        "/"
        (path_param)
        "/"
        (path_segment))
      (query_string
        (query_param
          (key)
          (variable))))))